<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LizardSpockGame">

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="76dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compChoiceImg"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/choiceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/choose"
        android:textColor="#0A0A0A"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <ImageView
        android:id="@+id/spockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/choiceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="304dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rock"
        android:layout_width="104dp"
        android:layout_height="87dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/rock"
        app:layout_constraintBottom_toTopOf="@+id/lizard"
        app:layout_constraintEnd_toStartOf="@+id/paper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceTitle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/paper"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/paper"
        app:layout_constraintEnd_toStartOf="@+id/scissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rock"
        app:layout_constraintTop_toBottomOf="@+id/spockTitle"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/scissors"
        android:layout_width="93dp"
        android:layout_height="83dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/scissors"
        app:layout_constraintBottom_toTopOf="@+id/spock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/paper"
        app:layout_constraintTop_toBottomOf="@+id/spockTitle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/scissors" />

    <ImageView
        android:id="@+id/lizard"
        android:layout_width="101dp"
        android:layout_height="92dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/lizard"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/spock"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paper"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lizard" />

    <ImageView
        android:id="@+id/spock"
        android:layout_width="101dp"
        android:layout_height="93dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/spock"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lizard"
        app:layout_constraintTop_toBottomOf="@+id/paper"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spock" />

    <TextView
        android:id="@+id/compChoiceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/computerChoice"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/compChoiceImg"
        android:layout_width="196dp"
        android:layout_height="139dp"
        android:contentDescription="@string/compImg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/computer" />

    <TextView
        android:id="@+id/rounds"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/messageTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider4"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/messageTxt"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rounds"
        app:layout_constraintTop_toTopOf="@+id/divider4"
        app:layout_constraintVertical_bias="0.488" />
</androidx.constraintlayout.widget.ConstraintLayout>