<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassicGame">

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="46dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicScissors"
        app:layout_constraintVertical_bias="0.816" />

    <ImageView
        android:id="@+id/classicGameHeader"
        android:layout_width="410dp"
        android:layout_height="104dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/classicTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rockpaperscissors" />

    <TextView
        android:id="@+id/classicTitle"
        android:layout_width="407dp"
        android:layout_height="43dp"
        android:contentDescription="@string/playClassic"
        android:fontFamily="casual"
        android:text="@string/playClassic"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <ImageView
        android:id="@+id/classicRock"
        android:layout_width="126dp"
        android:layout_height="87dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/rock"
        app:layout_constraintEnd_toStartOf="@+id/classicPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicTitle"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/classicPaper"
        android:layout_width="112dp"
        android:layout_height="86dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/classicRock"
        app:layout_constraintTop_toBottomOf="@+id/classicTitle"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/classicScissors"
        android:layout_width="102dp"
        android:layout_height="88dp"
        android:contentDescription="@string/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicRock"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/classicChoiceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:fontFamily="casual"
        android:text="@string/choose"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/classicRock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicTitle" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="46dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicScissors"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/classicCompImg"
        android:layout_width="184dp"
        android:layout_height="146dp"
        android:contentDescription="@string/compImg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.327"
        app:srcCompat="@drawable/computer" />

    <TextView
        android:id="@+id/compClassicTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/computerChoice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/classicCompImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/message"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toEndOf="@+id/round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.652" />

    <TextView
        android:id="@+id/round"
        android:layout_width="127dp"
        android:layout_height="31dp"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/message"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/message"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>