<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <ImageView
        android:id="@+id/classicGame"
        android:layout_width="390dp"
        android:layout_height="295dp"
        android:contentDescription="@string/playClassic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/rockpaperscissors" />

    <TextView
        android:id="@+id/classicText"
        android:layout_width="271dp"
        android:layout_height="25dp"
        android:contentDescription="@string/playClassic"
        android:text="@string/playClassic"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColorLink="#673AB7"
        android:textIsSelectable="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/classicGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/classicGame"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/lizardSpockGame"
        android:layout_width="395dp"
        android:layout_height="257dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/playLizardSpock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/lizardspock" />

    <TextView
        android:id="@+id/lizardSpockText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/playLizardSpock"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lizardSpockGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicGame"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>